After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 608726 - bytewriter: mistake in .h/.c function naming
bytewriter: mistake in .h/.c function naming
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gstreamer (core)
git master
Other All
: Normal blocker
: 0.10.26
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2010-02-01 20:45 UTC by Thiago Sousa Santos
Modified: 2010-02-01 23:49 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gstbytewriter: Fix different function names in .h and .c (1.67 KB, patch)
2010-02-01 20:48 UTC, Thiago Sousa Santos
committed Details | Review

Description Thiago Sousa Santos 2010-02-01 20:45:19 UTC
In .c we have: gst_byte_writer_reset_and_get_buffer
In .h we have: gst_byte_writer_reset_and_get_data_as_buffer

We should use the same name.
Comment 1 Thiago Sousa Santos 2010-02-01 20:48:15 UTC
Created attachment 152766 [details] [review]
gstbytewriter: Fix different function names in .h and .c

gst_byte_writer_reset_and_get_buffer wasn't declared
in .h, instead there was _reset_and_get_data_as_buffer.

Replace it with the real function name, that is smaller
and matches gst_byte_writer_free_and_get_buffer

Fixes #608726
Comment 2 Thiago Sousa Santos 2010-02-01 23:43:56 UTC
Module: gstreamer
Branch: master
Commit: 86a216b1bab4153e8382561f67e1e5012dbff75d
URL:    http://cgit.freedesktop.org/gstreamer/gstreamer/commit/?id=86a216b1bab4153e8382561f67e1e5012dbff75d

Author: Thiago Santos <thiago.sousa.santos@collabora.co.uk>
Date:   Mon Feb  1 17:40:08 2010 -0300

gstbytewriter: Fix different function names in .h and .c

gst_byte_writer_reset_and_get_buffer wasn't declared
in .h, instead there was _reset_and_get_data_as_buffer.

Replace it with the real function name, that is smaller
and matches gst_byte_writer_free_and_get_buffer